--- a/pom.xml
+++ b/pom.xml
@@ -32,30 +32,14 @@
         </extensions>
         
         <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>com.ppedregal.typescript</groupId>
-                    <artifactId>typescript-maven-plugin</artifactId>
-                    <version>0.0.1-SNAPSHOT</version>
-                </plugin>
-            </plugins>
         </pluginManagement>
         
         <plugins>
-            <plugin>
-                <groupId>com.ppedregal.typescript</groupId>
-      	        <artifactId>typescript-maven-plugin</artifactId>
-                <version>0.0.1-SNAPSHOT</version>        
-                <configuration>
-        	        <sourceDirectory>simulator-ts</sourceDirectory>
-                </configuration>        
-            </plugin>
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
                 <version>1.6</version>
                 <executions>
-
                     <execution>
                         <id>install-node-and-npm</id>
                         <phase>generate-resources</phase>
@@ -64,7 +48,7 @@
                         </goals>
                         <configuration>
                             <nodeVersion>v8.9.4</nodeVersion>
-                            <npmVersion>2.15.9</npmVersion>
+                            <npmVersion>5.6.0</npmVersion>
                         </configuration>
                     </execution>
 
@@ -81,18 +65,6 @@
                     </execution>
 
                     <execution>
-                        <id>npm build</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-                        <configuration>
-                            <arguments>run build</arguments>
-                            <npmInheritsProxyConfigFromMaven>false</npmInheritsProxyConfigFromMaven>
-                        </configuration>
-                    </execution>
-
-                    <execution>
                         <id>npm test</id>
                         <phase>generate-resources</phase>
                         <goals>
@@ -101,6 +73,30 @@
                         <configuration>
                             <skip>${skipTests}</skip>
                             <arguments>run test</arguments>
+                            <npmInheritsProxyConfigFromMaven>false</npmInheritsProxyConfigFromMaven>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>npm coverage</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>run coverage</arguments>
+                            <npmInheritsProxyConfigFromMaven>false</npmInheritsProxyConfigFromMaven>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>npm build</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>run build</arguments>
                             <npmInheritsProxyConfigFromMaven>false</npmInheritsProxyConfigFromMaven>
                         </configuration>
                     </execution>
