--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/EmbeddedMontiArc/demonstrator#readme",
   "devDependencies": {
+    "@types/jasmine": "^2.8.4",
     "codecov": "^2.3.1",
     "jasmine-ts": "^0.2.1",
     "nyc": "^11.4.1"
