Added a possibility to debug .ts in VS code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "removeComments": true,
         "preserveConstEnums": true,
         "sourceMap": true,
-        "outDir": "./tsc-output"
+        "outDir": "./tsc-output",
+        "inlineSources" : true
     },
     "include": [
         "./simulator-ts/rwth.visualisation/**/*"
